Fix category alignments

--- a/src/main/webapp/app/course/manage/overview/course-management-card.scss
+++ b/src/main/webapp/app/course/manage/overview/course-management-card.scss
@@ -121,6 +121,10 @@
         display: flex;
         align-items: center;
     }
+
+    .no-exercises {
+        font-weight: 300;
+    }
 }
 
 @media screen and (min-width: 2010px) {
