--- a/src/main/webapp/app/course/manage/overview/course-management-exercise-row.scss
+++ b/src/main/webapp/app/course/manage/overview/course-management-exercise-row.scss
@@ -30,8 +30,8 @@
         margin-left: 15px;
         display: flex;
         align-items: center;
-        flex-direction: row;
-        justify-content: center;
+        flex-direction: column;
+        justify-content: space-between;
 
         h4 {
             margin-bottom: -5px;
